# work

./: .classpath  .gitignore  .travis.yml  .vimrc  CONTRIBUTING.md  LICENSE.md  README.md  cabal.md  cabal.project  push_travis.sh
archive/: README.md
archive/gen-site/: gen-site.cabal
archive/gen-site/src/: Concurrent.hs  Dependency.hs  Feed.hs  File.hs  Item.hs  Pandoc.hs
archive/gen-site/template/: atom-entry.xml
bottleneck/: tcp.c
control/: .gitignore  LICENSE  README.md
database/: .gitignore
devops/: devops.xsd  example.xml  network.xsd  pom.xml
dns-server/: DNS.hs  LICENSE  README.md  dns-server.cabal
dns-server/DNS/: Main.hs  Resolve.hs  Server.hs  Socket.hs  Web.hs
dns-server/DNS/Lens/: Inside.hs
dns-server/DNS/Resolve/: Web.hs
dns-server/Lens/: Inside.hs
dns-server/dns-server/: Main.hs
dynasty/: README.md  dynasty.cabal  stack.yaml
dynasty/app/: Main.hs
dynasty/src/Dynasty/: Culture.hs  Date.hs  Display.hs  Event.hs  Html.hs  Level.hs  Main.hs  Person.hs  Random.hs  Religion.hs  Server.hs  State.hs  Title.hs  Trait.hs  Web.hs
dynasty/src/Dynasty/Multiplay/: Parlor.hs  Table.hs
dynasty/src/Dynasty/Person/: Modify.hs
dynasty/src/Dynasty/State/: Monad.hs
edom.github.io/: .gitignore  BingSiteAuth.xml  Gemfile  _config.yml  abdullah.md  about.md  account.md  act.md  ajpr.md  all.md  anarchism.md  android.md  andvsiph.md  anomaly-hindrance.org  anomaly-theory.org  anomaly.org  ansible.md  anthem.md  approx.md  april.md  art.md  art.org  ast.md  astro.md  atrunc.md  autotools.md  aws.md  bash.md  bib.bib  bibliography.yaml  biology.md  boeing.org  book.org  boss.md  browser.org  btpn.md  business.org  cabal.md  capitalism.md  cara-memilih-pejabat.org  (+306 more)
etc/: README.md  bashrc  gdb_pcsx  gdbinit  swiplrc.pro  vimrc  vscode_user_settings.json
gen-site/: LICENSE  README.md  gen-site.cabal  stack.yaml
gen-site/src/: Dictionary.hs  Metadata.hs  Pandoc.hs  Procedural.hs  Route.hs  Site.hs  Sitemap.hs  Template.hs
gen-site/template/: atom.xml
haji/: .gitignore  Hello.java  README.md  haji.cabal  stack.yaml
haji/app/: Main.hs
haji/src/: Jvm.hs  Jvm_arch.hs  Jvm_build.hs  Jvm_constant.hs  Jvm_debug.hs  Jvm_decode.hs  Jvm_execute.hs  Jvm_instruction.hs  Jvm_interop.hs  Jvm_io.hs  Jvm_load.hs  Jvm_member.hs  Jvm_prepare.hs  Jvm_state.hs  Jvm_type.hs  Jvm_type_system.hs  Jvm_value.hs  List.hs
interp/: .cproject  .project  README.md  build.sh  run.sh
interp/com.spacetimecat.interp.cpp/: .cproject  .project  CMakeLists.txt  Makefile  build.sh  interpreter_history  libinterpreter.so.0.0.0  run.sh
interp/com.spacetimecat.interp.cpp/include/: interp.hpp
interp/com.spacetimecat.interp.cpp/src/: SKETCH_allocator.h  gc.cpp  integer_std.h  library.h  machine.h  main.cpp  main1.cpp  pch.h  pl0.hpp  prolog.cpp  readline_api.h  readline_std.cpp  ring.h  rts.cpp  rts.hpp  rts_no_libstdcxx.cpp  std.h  test.cpp  test.h
interp/com.spacetimecat.interp.cpp/src/prolog/: object.cpp  parser.cpp  unify.cpp  world.cpp
java-fun/: .gitignore  README.md
java-prolog/: .project
meta/: .ghci  .gitignore  README.md  configure  elevate.sh  meta.cabal
meta/app/yi/: Main.hs
meta/doc/: catrec.md  extension.md  lang.md  plres.md  reveng.md  typering.md
meta/har/java/: pom.xml
meta/har/java/src/main/java/com/spacetimecat/meta/har/java/: Main.java  MyModule.java
meta/har/java/src/main/resources/com/spacetimecat/meta/example/css/: style.css
meta/rt/java/: pom.xml
meta/rt/java/src/main/java/com/spacetimecat/meta/rt/java/: Meta_runtime.java
meta/sh/: mvn_install.sh
meta/src/: Java_parse.hs  Jvm.hs  Jvm_binary.hs  Jvm_build.hs  Jvm_constant.hs  Jvm_debug.hs  Jvm_decode.hs  Jvm_execute.hs  Jvm_interop.hs  Jvm_load.hs  Jvm_prepare.hs  Jvm_state.hs  Manage.hs  Test_yaml.hs
meta/src/Manage/: Boilerplate.hs  Cast.hs  Host.hs  SSH.hs
meta/src/Meta/: Apply.hs  ByteString.hs  Cal.hs  CalExp.hs  CalIo.hs  CalSta.hs  CalVal.hs  Cbp.hs  Cbp_internal.hs  Csv.hs  Data.hs  DataColumn.hs  DataQuery.hs  Data_internal.hs  Docker.hs  Example.hs  ExampleTables.hs  File.hs  Fix.hs  Ghc.hs  GhcExample.hs  Ghc_8_2.hs  Ghc_8_4.hs  Hs.hs  HsCon.hs  HsDat.hs  HsExp.hs  HsMod.hs  HsPat.hs  HsRecord.hs  HsRender.hs  HsType.hs  Html.hs  Http.hs  Inject.hs  IntCbp.hs  Java.hs  JavaExp.hs  JavaRender.hs  JavaServlet.hs  (+73 more)
meta/srca/: Main.hs
meta/test/: Foo.hs
pragmatic/: LICENSE  README.md  pragmatic-error.cabal  pragmatic.cabal
pragmatic/app/: Main.hs
pragmatic/src/: Debian.hs  Error.hs  Error_internal.hs  Mutex.hs  Option.hs
prelude/: prelude.cabal
prelude/src/Meta/: ByteString.hs  Json.hs  Map.hs  Os.hs  Prelude.hs  PreludeGrammar.hs  Prelude_concurrent.hs  Prelude_time.hs  Text.hs
ptt/: .gitignore  README.md  Test.hs  ptt.cabal  stack.yaml
ptt/src/Haskell/: Interpret.hs  Syntax.hs
ptt/src/Haskell/Interpret/: Expression.hs  Name.hs
ptt/src/Lambda/: Deconstruct.hs  Reduce.hs  Term.hs
ptt/src/Parse/: Location.hs  Monad.hs
ptt/src/Parse/Haskell/: Abstract.hs  Example.hs  Layout.hs  Lex.hs  Parse.hs  Token.hs  Untoken.hs
ptt/src/Parse/Haskell/Lex/: Token.hs  Untoken.hs
ptt/src/Parse/Monad/: Parsec.hs
sh/: emacs  (+11 more)
sound/: .gitignore  CHANGELOG.md  README.md  sound.cabal
sound/src/: Sound.hs  Unstable.hs
sound/src/Sound/: Abstract.hs  Amplitude.hs  Buffer.hs  Class.hs  Compile.hs  Endo.hs  Example.hs  ExampleFail.hs  Fm.hs  Fourier.hs  GenBody.hs  GenPtr.hs  Generator.hs  GeneratorContinuation.hs  GeneratorMonadic.hs  Hint.hs  InfList.hs  Int.hs  Io.hs  IoFail.hs  IoPtr.hs  IoSox.hs  Pair.hs  Perform.hs  Portaudio.hs  Procedural.hs  Ptr.hs  Ramp.hs  Sample.hs  Step.hs  Stream.hs  StreamOld.hs  StreamVector.hs  Sync.hs  Table.hs  Tempo.hs  Time.hs
sound/src/Sound/Io/: Au.hs  Snd.hs
trade/: README.md  trade.cabal
trade/client/: Main.hs
trade/cnf/: ebnis.yaml
trade/server/: Main.hs
trade/src/: Ebnis_client.hs  Ebnis_connect.hs  Ebnis_proto.hs  Ebnis_scramble.hs  Ebnis_server.hs  Ebnis_session.hs  Programming_errors.hs  Trade_main.hs  Trade_orphan.hs
trade/src/Meta/: Crypto.hs  Log.hs  Network.hs  Pubsub.hs  Queue.hs  Stomp.hs  Zlib.hs
(+1799 files in other folders)
