name: dynasty
version: 0.0.0
synopsis: Dynasty simulator
description: See README.md
homepage: https://github.com/edom/dynasty/
license: Apache-2.0
license-file: LICENSE
author: Erik Dominikus
maintainer: software@spacetimecat.com
copyright: 2016 Erik Dominikus
category: Web
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
    hs-source-dirs: src
    exposed-modules:
        Dynasty.Culture
        Dynasty.Date
        Dynasty.Display
        Dynasty.Event
        Dynasty.Init
        Dynasty.Level
        Dynasty.Main
        Dynasty.Person
        Dynasty.Person.Modify
        Dynasty.Random
        Dynasty.Religion
        Dynasty.State
        Dynasty.State.Monad
        Dynasty.Trait
        Dynasty.Title
    build-depends:
        base >= 4.7 && < 5
        , hscurses
        , random
        , time
        , transformers
    default-language:
        Haskell98
    ghc-options:
        -O0
        -Wall

executable dynasty-exe
    hs-source-dirs: app
    main-is: Main.hs
    ghc-options:
        -O0
        -threaded
        -rtsopts
        -with-rtsopts=-N
    build-depends:
        base
        , dynasty
    default-language:
        Haskell98

source-repository head
    type: git
    location: https://github.com/edom/dynasty/
