name: haji
version: 0.0.0
synopsis: Java bytecode interpreter
description: See README.md
homepage: https://github.com/edom/haji
license: BSD3
license-file: LICENSE
author: Erik Dominikus
maintainer: software@spacetimecat.com
copyright: 2016 Erik Dominikus
category:
    Java
build-type: Simple
cabal-version: >=1.10

library
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options:
        -Wall
        -fno-warn-unused-binds
        -fno-warn-unused-imports
        -fno-warn-unused-matches
    exposed-modules:
        Jvm
        Jvm_arch
        Jvm_binary
        Jvm_build
        Jvm_constant
        Jvm_debug
        Jvm_decode
        Jvm_execute
        Jvm_io
        Jvm_instruction
        Jvm_interop
        Jvm_load
        Jvm_member
        Jvm_prepare
        Jvm_state
        Jvm_value
        Jvm_type
        Jvm_type_system
        List
    build-depends:
        base < 5
        , bytestring
        , cereal
        , containers
        , parsec
        , text
        , time
        , transformers
        , utf8-string

executable haji
    default-language: Haskell2010
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        base
        , haji

source-repository head
    type: git
    location: https://github.com/edom/haji
