name: haji
version: 0.0.0
synopsis: Java bytecode interpreter
description: See README.md
homepage: https://github.com/edom/haji
license: BSD3
license-file: LICENSE
author: Erik Dominikus
maintainer: software@spacetimecat.com
copyright: 2016 Erik Dominikus
category:
    Java
build-type: Simple
cabal-version: >=1.10

executable haji
    default-language: Haskell2010
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        base
        , meta

source-repository head
    type: git
    location: https://github.com/edom/haji
