name:               meta
version:            0.0.0
synopsis:           Metaprogramming
description:

    Documentation is in "Meta.Readme".

homepage:           https://github.com/edom/meta/
license:            Apache-2.0
license-file:       LICENSE
author:             Erik Dominikus
maintainer:         software@spacetimecat.com
copyright:          2018 Erik Dominikus
category:           Development
build-type:         Simple
cabal-version:      >=1.10

flag postgresql
    description:
        Enable connecting to PostgreSQL using HDBC-postgresql.
        Requires package libpq-dev on Ubuntu 14.04.
    default: True

flag stage1
    description: Include stage1.
    default: True

library

    default-language: Haskell2010
    ghc-options:
        -Wall

    hs-source-dirs:
        src
    exposed-modules:
        Meta.Example
        Meta.Cal
        Meta.CalExp
        Meta.CalVal
        Meta.Cbp
        Meta.Cbp_internal
        Meta.Data
        Meta.Data_internal
        Meta.File
        Meta.Hs
        Meta.HsCon
        Meta.HsDat
        Meta.HsExp
        Meta.HsMod
        Meta.HsPat
        Meta.HsRecord
        Meta.HsRender
        Meta.HsType
        Meta.Html
        Meta.Java
        Meta.JavaRender
        Meta.JavaServlet
        Meta.JavaSta
        Meta.JavaType
        Meta.JavaWebApp
        Meta.Lambda
        Meta.Maven
        Meta.MavenCmd
        Meta.MavenDep
        Meta.Prop
        Meta.Readme
        Meta.SqlCon
        Meta.SqlSyn
        Meta.SqlType
        Meta.Test
        Meta.Type
        Meta.Tys
        Meta.User
        Meta.Web
        Meta.Wrap
        Meta.WrapM
        Meta.Xml

    if flag(stage1)
        hs-source-dirs:
            src1
        exposed-modules:

    build-depends:
        base >= 4
        , HDBC >= 2
        , directory >= 1
        , filepath >= 1
        , process >= 1.2.0.0

    if flag(postgresql)
        build-depends:
            HDBC-postgresql >= 2
