name:               meta
version:            0.0.0
synopsis:           Metaprogramming
description:

    Documentation is in "Meta.Readme".

homepage:           https://github.com/edom/meta/
license:            Apache-2.0
license-file:       LICENSE
author:             Erik Dominikus
maintainer:         software@spacetimecat.com
copyright:          © 2013–2018 Erik Dominikus
category:           Development
build-type:         Simple
cabal-version:      >=1.10

flag postgresql
    description:
        Enable connecting to PostgreSQL using HDBC-postgresql.
        Requires package libpq-dev on Ubuntu 14.04.
        Uses HDBC-postgresql.
        2018-07-01: This is disabled because HDBC-postgresql-2.3.2.5 doesn't work with Cabal 2.
    default: False

flag stage1
    description: Include stage1.
    default: True

library

    default-language: Haskell2010

    ghc-options:
        -Wall

    hs-source-dirs:
        src

    exposed-modules:
        Meta.Example
        Meta.Cal
        Meta.CalExp
        Meta.CalIo
        Meta.CalSta
        Meta.CalVal
        Meta.Cbp
        Meta.Cbp_internal
        Meta.Csv
        Meta.Data
        Meta.DataColumn
        Meta.DataQuery
        Meta.Data_internal
        Meta.File
        Meta.Fix
        Meta.Hs
        Meta.HsCon
        Meta.HsDat
        Meta.HsExp
        Meta.HsMod
        Meta.HsPat
        Meta.HsRecord
        Meta.HsRender
        Meta.HsType
        Meta.Html
        Meta.Java
        Meta.JavaExp
        Meta.JavaRender
        Meta.JavaServlet
        Meta.JavaSta
        Meta.JavaType
        Meta.JavaWebApp
        Meta.JvmCls
        Meta.JvmType
        Meta.Lambda
        Meta.List
        Meta.Logic
        Meta.LogicExp
        Meta.LogicVal
        Meta.Machine
        Meta.Map
        Meta.Maven
        Meta.MavenDep
        Meta.OsProc
        Meta.Peg
        Meta.PegExample
        Meta.PegGen
        Meta.PegGenExample
        Meta.PegGenLoc
        Meta.PegGenRule
        Meta.PegGenTree
        Meta.Prelude
        Meta.PreludeGrammar
        Meta.PreludeMin
        Meta.Prop
        Meta.Readme
        Meta.Scheme
        Meta.Ski
        Meta.SqlCon
        Meta.SqlCon_hp
        Meta.SqlInf
        Meta.SqlSyn
        Meta.SqlType
        Meta.Test
        Meta.Time
        Meta.Type
        Meta.Tys
        Meta.User
        Meta.UserCmd
        Meta.UserGenJava
        Meta.UserHtml
        Meta.UserPage
        Meta.Web
        Meta.WebContent
        Meta.WebHandler
        Meta.WebPage
        Meta.Wrap
        Meta.WrapM
        Meta.Xml
        Manage
        Manage.Boilerplate
        Manage.Cast
        Manage.Command
        Manage.Host
        Manage.Iptables
        Manage.SSH

    if flag(stage1)
        hs-source-dirs:
            src1
        exposed-modules:

    build-depends:
        base >= 4 && < 5
        , bytestring >= 0 && < 1
        , HDBC >= 2 && < 3
        , cereal >= 0 && < 1
        , containers >= 0.4 && < 1
        , csv >= 0
        , directory >= 1.2.3.0 && < 2
        , filepath >= 1 && < 2
        , parsec >= 3 && < 4
        , postgresql-simple >= 0.4 && < 1
        , pretty >= 1.0.0.0 && < 2
        , process >= 1.4.3.0 && < 2
        , shell-escape >= 0 && < 1
        , split >= 0.1 && < 1
        , time >= 1
        , utf8-string >= 1 && < 2

    if flag(postgresql)
        build-depends:
            HDBC-postgresql >= 2
        cpp-options:
            -DHAVE_postgresql

    if impl(ghc >= 7.10)
        cpp-options:
            -DHAVE_PatternSynonyms=1
        default-extensions:
            PatternSynonyms

executable meta-example
    default-language: Haskell2010
    main-is: Main.hs
    hs-source-dirs: srca
    build-depends: base, meta

-- This should be merged into meta-example.
executable meta-manage-example
    default-language: Haskell2010
    hs-source-dirs: app
    main-is: Main.hs
    build-depends: base, meta
