name: pragmatic-error
version: 0.0.0
synopsis: Pragmatic error-handling library
description: See README.md
homepage: https://github.com/edom/pragmatic-error
license: BSD3
license-file: LICENSE
author: Erik Dominikus
maintainer: software@spacetimecat.com
copyright: 2016 Erik Dominikus
category:
    Error Handling
build-type: Simple
cabal-version: >=1.10

library
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules:
        Error
    other-modules:
        Error_internal
    build-depends:
        base < 5
        , errors

source-repository head
    type: git
    location: https://github.com/edom/pragmatic-error
