name: pragmatic
version: 0.3.0
synopsis: Pragmatic common library
description: See README.md
homepage: https://github.com/edom/pragmatic
license: BSD3
license-file: LICENSE
author: Erik Dominikus
maintainer: software@spacetimecat.com
copyright: 2016 Erik Dominikus
category:
    Development
build-type: Simple
cabal-version: >=1.10

library
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules:
        Log
        Error
        Mutex
        Multitask
        String
    other-modules:
        Error_internal
    build-depends:
        base < 5
        , async
        , errors
        , time
        , transformers

source-repository head
    type: git
    location: https://github.com/edom/pragmatic
