name: pragmatic
version: 0.3.2
synopsis: Pragmatic common library
description: See README.md
homepage: https://github.com/edom/pragmatic
license: BSD3
license-file: LICENSE
author: Erik Dominikus
maintainer: software@spacetimecat.com
copyright: 2016 Erik Dominikus
category:
    Development
build-type: Simple
cabal-version: >=1.10

library
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules:
        Debian
        Error
        Log
        Multitask
        Mutex
        Option
        String
    other-modules:
        Debian_internal
        Error_internal
    build-depends:
        base < 5
        , async
        , bytestring
        , containers
        , debian
        , errors
        , network-uri
        , optparse-applicative
        , parsec
        , process
        , text
        , time
        , transformers
        , zlib

executable prag
    default-language: Haskell2010
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        base
        , pragmatic

source-repository head
    type: git
    location: https://github.com/edom/pragmatic
