name: pragmatic
version: 0.3.2
synopsis: Pragmatic common library
description: See README.md
homepage: https://github.com/edom/pragmatic
license: BSD3
license-file: LICENSE
author: Erik Dominikus
maintainer: software@spacetimecat.com
copyright: 2016 Erik Dominikus
category:
    Development
build-type: Simple
cabal-version: >=1.10

flag debian
    default: False

flag option
    default: False

library
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules:
        Error
        Error_internal
        Log
        Multitask
        Mutex
        String
    build-depends:
        base < 5
        , async
        , bytestring
        , containers
        , errors
        , network-uri
        , parsec
        , process
        , text
        , time
        , transformers
        , zlib

    if flag(debian)
        build-depends:
            debian
        exposed-modules:
            Debian
            Debian_internal

    if flag(option)
        build-depends:
            optparse-applicative
        exposed-modules:
            Option

executable prag
    default-language: Haskell2010
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        base
        , pragmatic
    if !flag(debian)
        buildable: False

source-repository head
    type: git
    location: https://github.com/edom/pragmatic
