name:               prelude
version:            0.0.0
synopsis:           Prelude
description:

    Documentation is in "Meta.Prelude".

homepage:           https://github.com/edom/work/
license:            LGPL-3.0
author:             Erik Dominikus
maintainer:         software@spacetimecat.com
copyright:          © 2018 Erik Dominikus
category:           Development
build-type:         Simple
cabal-version:      >=1.10

library

    default-language: Haskell2010
    default-extensions:
        FlexibleContexts
        FlexibleInstances
        MultiParamTypeClasses
        TypeSynonymInstances

    ghc-options:
        -Wall

    hs-source-dirs:
        src

    -- Java_parse
    exposed-modules:
        Meta.ByteString
        Meta.Json
        Meta.Map
        Meta.Os
        Meta.OsProc
        Meta.Prelude
        Meta.PreludeGrammar
        Meta.PreludeMin
        Meta.Prelude_concurrent
        Meta.Prelude_time
        Meta.Text

    -- See Codec.Archive.Zip.toArchiveOrFail about @binary >= 0.7@.
    build-depends:
        base >= 4.6 && < 5
        , aeson >= 1 && < 2
        , bytestring >= 0 && < 1
        , containers >= 0.4 && < 1
        , directory >= 1.2.3.0 && < 2
        , directory-tree
        , mtl >= 2.2 && < 2.3
        , process >= 1.4.3.0 && < 2
        , scientific
        , stm >= 2.4 && < 2.5
        , text
        , time >= 1
        , unordered-containers
        , utf8-string >= 1 && < 2
        , vector
