name: ptt
version: 0.0.0
synopsis: Program transformation tool
description: See README.md
homepage: https://github.com/edom/dynasty/
license: Apache-2.0
license-file: LICENSE
author: Erik Dominikus
maintainer: software@spacetimecat.com
copyright: 2016 Erik Dominikus
category: Web
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
    hs-source-dirs: src
    exposed-modules:
        Parse.Haskell.Example
        Parse.Haskell.Layout
        Parse.Haskell.Lex
        Parse.Haskell.Parse
        Parse.Haskell.Token
        Parse.Haskell.Untoken
        Parse.Location
        Parse.Monad
        Parse.Monad.Parsec
    build-depends:
        base >= 4.7 && < 5
        , bytestring
        , parsec
        , transformers
    default-language:
        Haskell2010
    ghc-options:
        -O0
        -Wall

source-repository head
    type: git
    location: https://github.com/edom/ptt/
