name:               trade
version:            0.0.0
synopsis:           Trading
license:            AGPL-3
author:             Erik Dominikus
maintainer:         software@spacetimecat.com
copyright:          © 2018 Erik Dominikus
build-type:         Simple
cabal-version:      >=1.10

library
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options:
        -Wall
    default-extensions:
        FlexibleContexts
    exposed-modules:
        Trade_main
        Ebnis_client
        Ebnis_connect
        Ebnis_proto
        Ebnis_scramble
        Ebnis_server
        Ebnis_session
        Meta.Crypto
        Meta.Log
        Meta.Network
        Meta.Stomp
        Meta.Zlib
        Trade_orphan
    build-depends:
        base >= 4.10 && < 4.11
        , meta
        , array >= 0.5 && < 0.6
        , base64-bytestring >= 1.0 && < 1.1
        , bytestring >= 0.10 && < 0.11
        , cereal >= 0.5 && < 0.6
        , cryptonite >= 0.25 && < 0.26
        , HsOpenSSL >= 0.11 && < 0.12
        , HsYAML >= 0.1 && < 0.2
        , messagepack >= 0.5 && < 0.6
        , mtl >= 2.2 && < 2.3
        , network >= 2.7 && < 2.8
        , network-simple >= 0.4 && < 0.5
        , stm >= 2.4 && < 2.5
        , time >= 1.8 && < 1.9
        , zlib-bindings >= 0.1 && < 0.2

executable ebnis_client
    default-language: Haskell2010
    hs-source-dirs: client
    main-is: Main.hs
    ghc-options:
        -Wall
        -rtsopts
        -threaded
        -fprof-auto
    build-depends: base, trade

executable ebnis_server
    default-language: Haskell2010
    hs-source-dirs: server
    main-is: Main.hs
    ghc-options:
        -Wall
        -rtsopts
        -threaded
        -fprof-auto
    build-depends: base, trade
